Changes for 3.0.17rc2

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.0.17rc1

Bug fixes:
..F....... [ZBX-12425] fixed selection of web items in the "Plain text" screen element (Sasha)
...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
.......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
A.F....... [ZBX-13742] fixed parsing of the operator "not" in trigger expression (Sasha)
A.F....... [ZBX-13680] fixed action not being cloned due to existing operation id being submitted (agriscenko)
...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
..F....... [ZBX-13500] fixed fractional values in triggers being misinterpreted without a leading 0 (agriscenko)
..F....... [ZBX-13561] fixed incorrectly displayed pie graph when first item has no data (Ivo)

--------------------------------------------------------------------------------
Changes for 3.0.16

3.0.16rc1 was released as 3.0.16 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.16rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-13542] fixed http steps on template not inheriting hosts application setting (nikita)
........S. [ZBX-13339] improved deallocation of memory (MVekslers)
..F....... [ZBX-13412] fixed JS error and wrong form behaviour when changing item type, type of information, data type (agriscenko)
..F....... [ZBX-13257] fixed display of the latest item in Audit log (agriscenko)